[package]
name = "abagames-util"
version = "0.1.0"
authors = ["Ben Boeckel <mathstuf@gmail.com>"]
readme = "README>md"
license = "BSD-2-Clause"
repository = "https://github.com/mathstuf/rust-abagames-util"
homepage = "https://github.com/mathstuf/rust-abagames-util"

[dependencies]
chrono = "~0.4"
directories = "^1.0"
mersenne_twister = "^1.1"
rand = "~0.4"
rodio = { version = "~0.8", default-features = false, features = ["vorbis", "wav"] }

cgmath = "~0.17"
failure = "~0.1"
gfx = "~0.17"
gfx_device_gl = "~0.15"
gfx_window_sdl = "~0.8"
rayon = "^1.0"
sdl2 = "~0.31"
